<resources>
    <string name="app_name">Activity_intent</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="patronymic">Patronymic</string>
    <string name="ok" translatable="false">OK</string>

</resources>